--- a/src/main/resources/com/mycompany/javafx/database/ControlPanel.fxml
+++ b/src/main/resources/com/mycompany/javafx/database/ControlPanel.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
-</AnchorPane>
+
+<Pane prefHeight="482.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label layoutX="264.0" layoutY="29.0" prefHeight="35.0" prefWidth="143.0" text="Control  Panel">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Button layoutX="73.0" layoutY="151.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="View Employee" />
+      <Button layoutX="73.0" layoutY="254.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Update/Delete" />
+      <Button layoutX="73.0" layoutY="351.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Insert Employee" />
+   </children>
+</Pane>
