--- a/src/main/resources/com/mycompany/javafx/database/Main.fxml
+++ b/src/main/resources/com/mycompany/javafx/database/Main.fxml
@@ -43,8 +43,8 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button layoutX="537.0" layoutY="377.0" mnemonicParsing="false" onAction="#enterCP" prefHeight="48.0" prefWidth="86.0" text="Enter" />
-      <Button layoutX="258.0" layoutY="440.0" mnemonicParsing="false" onAction="#statusDB" prefHeight="31.0" prefWidth="86.0" text="Check DB" />
+      <Button layoutX="542.0" layoutY="395.0" mnemonicParsing="false" onAction="#enterCP" prefHeight="48.0" prefWidth="86.0" text="Enter" />
+      <Button layoutX="258.0" layoutY="431.0" mnemonicParsing="false" onAction="#statusDB" prefHeight="40.0" prefWidth="122.0" text="Check Connection" />
       <Label id="check" fx:id="check" layoutX="129.0" layoutY="305.0" prefHeight="40.0" prefWidth="172.0" />
    </children>
 </Pane>
