--- a/src/main/resources/com/mycompany/javafx/database/ControlPanel.fxml
+++ b/src/main/resources/com/mycompany/javafx/database/ControlPanel.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -13,8 +15,13 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button layoutX="73.0" layoutY="151.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="View Employee" />
-      <Button layoutX="73.0" layoutY="254.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Update/Delete" />
-      <Button layoutX="73.0" layoutY="351.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Insert Employee" />
+      <Button layoutX="142.0" layoutY="112.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="View Employee" />
+      <Button layoutX="281.0" layoutY="112.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Update/Delete" />
+      <Button layoutX="420.0" layoutY="112.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="111.0" text="Insert Employee" />
+      <ImageView fitHeight="321.0" fitWidth="418.0" layoutX="127.0" layoutY="197.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@208-2088584_employee-png-transparent-png.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
